force-app/main/default/objects/Monthly_Expense__c/Monthly_Expense__c.object-meta.xml
<CustomObject>
    <label>Monthly Expense</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Monthly Expense Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Monthly Expenses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>