force-app/main/default/objects/Monthly_Expense__c/fields/Food_Cost__c.field-meta.xml
<CustomField>
    <fullName>Food_Cost__c</fullName>
    <label>Food Cost</label>
    <summarizedField>Daily_Expenses__c.Bill_Amount__c</summarizedField>
    <summaryFilterItems>
        <field>Daily_Expenses__c.Expense_Type__c</field>
        <operation>contains</operation>
        <value>Food</value>
    </summaryFilterItems>
    <summaryForeignKey>Daily_Expenses__c.Current_Month__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>