force-app/main/default/objects/Monthly_Expense__c/fields/Total_Expenses__c.field-meta.xml
<CustomField>
    <fullName>Total_Expenses__c</fullName>
    <label>Total Expenses</label>
    <summarizedField>Daily_Expenses__c.Bill_Amount__c</summarizedField>
    <summaryForeignKey>Daily_Expenses__c.Current_Month__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>