force-app/main/default/objects/Monthly_Expense__c/fields/Travel_Expenses__c.field-meta.xml
<CustomField>
    <fullName>Travel_Expenses__c</fullName>
    <label>Travel Expenses</label>
    <summarizedField>Daily_Expenses__c.Bill_Amount__c</summarizedField>
    <summaryFilterItems>
        <field>Daily_Expenses__c.Expense_Type__c</field>
        <operation>equals</operation>
        <value>Travel</value>
    </summaryFilterItems>
    <summaryForeignKey>Daily_Expenses__c.Current_Month__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>